PLGN-14 change validation schema for get user info action

--- a/plugins/azure_ad_admin/plugin.spec.yaml
+++ b/plugins/azure_ad_admin/plugin.spec.yaml
@@ -232,12 +232,12 @@ types:
       required: false
     isResourceAccount:
       title: Is Resource Account
-      type: string
+      type: boolean
       description: Is Resource Account
       required: false
     showInAddressList:
       title: Show In Address List
-      type: string
+      type: boolean
       description: Show In Address List
       required: false
     signInSessionsValidFromDateTime:
