[PLGN-28, PLGN-32] Python 3 Script Release (#1482)
* Python3 Script - 11285 - Fix issue with installing python modules | Fix issue with indentation (#1467)

* Python 3 Script - 11285 - Changed user to root in Dockerfile (#1480)

--- a/plugins/python_3_script/Dockerfile
+++ b/plugins/python_3_script/Dockerfile
@@ -24,6 +24,6 @@ RUN if [ -f requirements.txt ]; then pip install --no-cache-dir -r requirements.
 RUN python setup.py build && python setup.py install
 
 # User to run plugin code. The two supported users are: root, nobody
-USER nobody
+USER root
 
 ENTRYPOINT ["/usr/local/bin/icon_python_3_script"]
