Microsoft Teams - 25 - Set default channel type to Standard

--- a/plugins/microsoft_teams/plugin.spec.yaml
+++ b/plugins/microsoft_teams/plugin.spec.yaml
@@ -564,6 +564,7 @@ actions:
           - Standard
           - Private
         example: Standard
+        default: Standard
     output:
       success:
         title: Success
