--- a/plugins/freshdesk/plugin.spec.yaml
+++ b/plugins/freshdesk/plugin.spec.yaml
@@ -9,6 +9,7 @@ supported_versions: ["FreshDesk API v2"]
 vendor: rapid7
 support: rapid7
 status: []
+cloud_ready: true
 resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/freshdesk
   license_url: https://github.com/rapid7/insightconnect-plugins/blob/master/LICENSE
@@ -18,7 +19,7 @@ tags:
   - ticketing
 hub_tags:
   use_cases: [reporting_and_analytics]
-  keywords: [ticketing, freshdesk]
+  keywords: [ticketing, freshdesk, cloud_enabled]
   features: []
 types:
   attachmentInput:
