--- a/plugins/whois/whois.conf
+++ b/plugins/whois/whois.conf
@@ -654,7 +654,7 @@
 \.mom$ whois.uniregistry.net
 \.monash$ whois.nic.monash
 \.money$ whois.donuts.co
-\.monster$ whois.afilias-srs.net
+\.monster$ whois.nic.monster
 \.mopar$ whois.afilias-srs.net
 \.mormon$ whois.afilias-srs.net
 \.mortgage$ whois.rightside.co
