--- a/plugins/nmap/requirements.txt
+++ b/plugins/nmap/requirements.txt
@@ -2,3 +2,4 @@
 # All dependencies must be version-pinned, eg. requests==1.2.0
 # See: https://pip.pypa.io/en/stable/user_guide/#requirements-files
 python-nmap==0.7.1
+nmap == 0.0.1
