--- a/.github/workflows/prospector.yml
+++ b/.github/workflows/prospector.yml
@@ -46,7 +46,7 @@ jobs:
           if ! [[ ${#CHANGED_FILES[*]} == 0 ]]
           then
             echo "Running Prospector on: "${CHANGED_FILES[*]}
-            prospector --profile prospector.yaml ${CHANGED_FILES[*]} --tool bandit --tool mccabe --tool pylint --tool pyflakes
+            prospector --profile prospector.yaml ${CHANGED_FILES[*]} --tool bandit --tool mccabe --tool pyflakes
           else
             echo "No python files changed, so prospector was not run. Differences from Master branch found in: "${OUTPUT[*]}
           fi
