change role requirement

--- a/plugins/microsoft_teams/plugin.spec.yaml
+++ b/plugins/microsoft_teams/plugin.spec.yaml
@@ -714,8 +714,9 @@ actions:
         enum:
           - Owner
           - Member
-        required: false
+        required: true
         example: Owner
+        default: Member
     output:
       success:
         title: Success
