--- a/plugins/jira/requirements.txt
+++ b/plugins/jira/requirements.txt
@@ -1,5 +1,6 @@
 # List third-party dependencies here, separated by newlines. 
 # All dependencies must be version-pinned, eg. requests==1.2.0
 # See: https://pip.pypa.io/en/stable/user_guide/#requirements-files
-jira==2.0.0
+jira==3.4.1
 timeout-decorator==0.5.0
+parameterized==0.8.1
