--- a/plugins/sentinelone/plugin.spec.yaml
+++ b/plugins/sentinelone/plugin.spec.yaml
@@ -3,8 +3,8 @@ extension: plugin
 products: [insightconnect]
 name: sentinelone
 title: SentinelOne
-version: 7.1.0
-supported_versions: ["2.0.0", "2.1.0"]
+version: 8.0.0
+supported_versions: ["2.1.0"]
 description: The SentinelOne plugin allows you to manage and mitigate all your security operations through SentinelOne
 vendor: rapid7
 support: rapid7
@@ -1457,27 +1457,21 @@ types:
       required: false
 
 connection:
-  authentication_type:
-    title: Authentication Type
-    description: Type of authentication
+  user_type:
+    title: User Type
+    description: Type of user
     type: string
     required: true
     enum:
-      - Basic Auth
-      - API Token Auth
-    default: Basic Auth
-    example: Basic Auth
-  basic_auth_credentials:
-    title: Basic Auth Credentials
-    type: credential_username_password
-    description: Username and password. Provide if you choose Basic Auth type
-    required: false
-    example: '{"username": "user@example.com", "password": "mypassword"}'
+      - Console user
+      - Service user
+    example: Console user
+    default: Console user
   api_key:
     title: API Key
-    description: Credential secret API key. Provide if you choose API Token Auth type
+    description: Credential secret API key
     type: credential_secret_key
-    required: false
+    required: true
     example: 9de5069c5afe602b2ea0a04b66beb2c0
   url:
     title: URL
@@ -1495,16 +1489,19 @@ actions:
         type: pagination
         description: Pagination
         required: false
+        example: '{"totalItems": 1}'
       errors:
         title: Errors
         type: '[]object'
         description: Errors
         required: false
+        example: '[{"type": "object"}]'
       data:
         title: Data
         type: '[]threat_data'
         description: Data
         required: false
+        example: '[ { "agentOsType": "windows", "automaticallyResolved": false } ]'
   blacklist_by_content_hash:
     title: Blacklist by Content Hash
     description: Add hashed content to global blacklist. The input makes use of contentHash
@@ -1563,6 +1560,7 @@ actions:
         description: Number of entities affected by the requested operation
         type: integer
         required: false
+        example: 1
   mitigate_threat:
     title: Mitigate Threat
     description: Apply a mitigation action to a threat
@@ -1591,6 +1589,7 @@ actions:
         description: Number of entities affected by the requested operation
         type: integer
         required: false
+        example: 1
   mark_as_benign:
     title: Mark as Benign
     description: Mark a threat as resolved and adds the IOC's to global allow list
@@ -1630,6 +1629,7 @@ actions:
         description: Number of entities affected by the requested operation
         type: integer
         required: false
+        example: 1
   mark_as_threat:
     title: Mark as Threat
     description: Mark a suspicious threat as a threat
@@ -1669,6 +1669,7 @@ actions:
         description: Number of entities affected by the requested operation
         type: integer
         required: false
+        example: 1
   activities_list:
     title: Get Activities
     description: Get a list of activities
@@ -1815,6 +1816,7 @@ actions:
         description: Result of activities list
         type: '[]activities_list'
         required: true
+        example: '[{ "agentUpdatedVersion": "2.5.1.1320", "id": "225494730938493804", "createdAt": "2018-02-27T04:49:26.257525Z", "groupId": "225494730938493804", "primaryDescription": "string", "accountName": "string", "description": "string", "osFamily": "windows_legacy", "hash": "string", "secondaryDescription": "string", "comments": "string", "siteId": "225494730938493804", "groupName": "string", "threatId": "225494730938493804", "agentId": "225494730938493804", "data": { "computer_name": "COMP_1234", "username": "my_user" }, "activityType": "integer", "accountId": "225494730938493804", "updatedAt": "2018-02-27T04:49:26.257525Z", "userId": "225494730938493804", "activityUuid": "string", "siteName": "string" }]'
   activities_types:
     title: Get Activity Types
     description: Get a list of activity types
@@ -1824,6 +1826,7 @@ actions:
         description: Result of activities types
         type: '[]activities_types'
         required: true
+        example: '[{ "id": 0, "descriptionTemplate": "string", "action": "string" }]'
   apps_by_agent_ids:
     title: Agents Applications
     description: Retrieve running applications for a specific agent
@@ -1840,6 +1843,7 @@ actions:
         description: List of installed applications
         type: '[]agent_applications'
         required: true
+        example: '[ { "publisher": "string", "installedDate": "2018-02-27T04:49:26.257525Z", "size": "integer", "name": "string", "version": "string" } ]'
   agents_summary:
     title: Count Summary
     description: Summary of agents by numbers
@@ -1909,6 +1913,7 @@ actions:
         description: Account Name to validate
         type: boolean
         required: true
+        example: true
   agents_reload:
     title: Agents Reload
     description: Reload an agent module (applies to Windows agents only)
@@ -1936,6 +1941,7 @@ actions:
         description: Number of entities affected by the requested operation
         type: integer
         required: false
+        example: 1
   agents_action:
     title: Run Agent Action
     description: Perform actions relating to your SentinelOne agents. This will help manage your assets connected to your SentinelOne console. Documentation for these actions can be found at https://yoururl.sentinelone.net/api-doc/api-details?category=agent-actions
@@ -1969,6 +1975,7 @@ actions:
         description: Number of entities affected by the requested operation
         type: integer
         required: false
+        example: 1
   search_agents:
     title: Search Agents
     description: Search for agents
@@ -2012,6 +2019,7 @@ actions:
         description: Detailed information about agents found
         type: "[]agent_data"
         required: false
+        example: '{ "agents": [ { "accountId": "433241117337583618", "accountName": "SentinelOne", "activeDirectory": { "computerDistinguishedName": "None", "computerMemberOf": [], "lastUserDistinguishedName": "None", "lastUserMemberOf": [] }, "activeThreats": 0, "agentVersion": "4.1.4.82", "allowRemoteShell": false, "appsVulnerabilityStatus": "up_to_date", "cloudProviders": {}, "computerName": "so-agent-win12", "consoleMigrationStatus": "N/A", "coreCount": 1, "cpuCount": 1, "cpuId": "Intel(R) Xeon(R) CPU E5-2690 v2 @ 3.00GHz", "createdAt": "2020-05-28T14:53:03.014660Z", "domain": "WORKGROUP", "encryptedApplications": false, "externalId": "", "externalIp": "198.51.100.100", "firewallEnabled": true, "groupId": "521580416411822676", "groupIp": "198.51.100.x", "groupName": "Default Group", "id": "901345720792880606", "inRemoteShellSession": false, "infected": false, "installerType": ".exe", "isActive": true, "isDecommissioned": false, "isPendingUninstall": false, "isUninstalled": false, "isUpToDate": true, "lastActiveDate": "2020-06-05T18:32:56.748620Z", "lastIpToMgmt": "10.4.24.55", "lastLoggedInUserName": "", "licenseKey": "", "locationEnabled": true, "locationType": "fallback", "locations": [ { "id": "629380164464502476", "name": "Fallback", "scope": "global" } ], "machineType": "server", "mitigationMode": "protect", "mitigationModeSuspicious": "detect", "modelName": "VMware, Inc. - VMware Virtual Platform", "networkInterfaces": [ { "id": "901345720801269215", "inet": [ "198.51.100.100" ], "inet6": [ "2001:db8:8:4::2" ], "name": "Ethernet", "physical": "00:50:56:94:17:08" } ], "networkQuarantineEnabled": false, "networkStatus": "disconnected", "operationalState": "na", "operationalStateExpiration": "None", "osArch": "64 bit", "osName": "Windows Server 2012 Standard", "osRevision": "9200", "osStartTime": "2020-05-28T14:59:36Z", "osType": "windows", "osUsername": "None", "rangerStatus": "NotApplicable", "rangerVersion": "None", "registeredAt": "2020-05-28T14:53:03.010853Z", "remoteProfilingState": "disabled", "remoteProfilingStateExpiration": "None", "scanAbortedAt": "None", "scanFinishedAt": "2020-05-28T22:24:59.420166Z", "scanStartedAt": "2020-05-28T21:12:58.216807Z", "scanStatus": "finished", "siteId": "521580416395045459", "siteName": "Rapid7", "threatRebootRequired": false, "totalMemory": 1023, "updatedAt": "2020-06-05T15:39:10.754112Z", "userActionsNeeded": [], "uuid": "28db47168fa54f89aeed99769ac8d4dc" } ] }'
   get_agent_details:
     title: Get Agent Details
     description: Retrieve agent details
@@ -2048,6 +2056,7 @@ actions:
         description: Detailed information about agent found
         type: agent_data
         required: false
+        example: '{ "agent": { "accountId": "433241117337583618", "accountName": "SentinelOne", "activeDirectory": { "computerDistinguishedName": "None", "computerMemberOf": [], "lastUserDistinguishedName": "None", "lastUserMemberOf": [] }, "activeThreats": 0, "agentVersion": "4.1.4.82", "allowRemoteShell": false, "appsVulnerabilityStatus": "up_to_date", "cloudProviders": {}, "computerName": "so-agent-win12", "consoleMigrationStatus": "N/A", "coreCount": 1, "cpuCount": 1, "cpuId": "Intel(R) Xeon(R) CPU E5-2690 v2 @ 3.00GHz", "createdAt": "2020-05-28T14:53:03.014660Z", "domain": "WORKGROUP", "encryptedApplications": false, "externalId": "", "externalIp": "198.51.100.100", "firewallEnabled": true, "groupId": "521580416411822676", "groupIp": "198.51.100.x", "groupName": "Default Group", "id": "901345720792880606", "inRemoteShellSession": false, "infected": false, "installerType": ".exe", "isActive": true, "isDecommissioned": false, "isPendingUninstall": false, "isUninstalled": false, "isUpToDate": true, "lastActiveDate": "2020-06-05T18:32:56.748620Z", "lastIpToMgmt": "10.4.24.55", "lastLoggedInUserName": "", "licenseKey": "", "locationEnabled": true, "locationType": "fallback", "locations": [ { "id": "629380164464502476", "name": "Fallback", "scope": "global" } ], "machineType": "server", "mitigationMode": "protect", "mitigationModeSuspicious": "detect", "modelName": "VMware, Inc. - VMware Virtual Platform", "networkInterfaces": [ { "id": "901345720801269215", "inet": [ "198.51.100.100" ], "inet6": [ "2001:db8:8:4::2" ], "name": "Ethernet", "physical": "00:50:56:94:17:08" } ], "networkQuarantineEnabled": false, "networkStatus": "disconnected", "operationalState": "na", "operationalStateExpiration": "None", "osArch": "64 bit", "osName": "Windows Server 2012 Standard", "osRevision": "9200", "osStartTime": "2020-05-28T14:59:36Z", "osType": "windows", "osUsername": "None", "rangerStatus": "NotApplicable", "rangerVersion": "None", "registeredAt": "2020-05-28T14:53:03.010853Z", "remoteProfilingState": "disabled", "remoteProfilingStateExpiration": "None", "scanAbortedAt": "None", "scanFinishedAt": "2020-05-28T22:24:59.420166Z", "scanStartedAt": "2020-05-28T21:12:58.216807Z", "scanStatus": "finished", "siteId": "521580416395045459", "siteName": "Rapid7", "threatRebootRequired": false, "totalMemory": 1023, "updatedAt": "2020-06-05T15:39:10.754112Z", "userActionsNeeded": [], "uuid": "28db47168fa54f89aeed99769ac8d4dc" } }'
   quarantine:
     title: Quarantine
     description: Isolate (quarantine) endpoint from the network
@@ -2083,6 +2092,7 @@ actions:
         description: SentinelOne API call response data
         type: quarantine_response
         required: false
+        example: '{ "response": { "data": [ { "agentDomain": "WORKGROUP", "agentGroupId": "123123456712356789", "agentId": "123123456712356789" } } }'
   blacklist:
     title: Blacklist
     description: Blacklist and unblacklist a SHA1 hash
@@ -2113,11 +2123,13 @@ actions:
         description: Return true if blacklist item was created or deleted
         type: boolean
         required: true
+        example: true
       message:
         title: Message
         description: Return details about action results
         type: string
         required: true
+        example: 'The given hash has been blocked'
   threats_fetch_file:
     title: Fetch Threats File
     description: Fetch a file associated with the threat that matches the filter. Your user role must have permissions to Fetch Threat File - Admin, IR Team, SOC
@@ -2140,6 +2152,7 @@ actions:
         description: Base64 encoded threat file
         type: file
         required: true
+        example: '{ "file": { "filename": "report.txt", "content": "UmFwaWQ3IEluc2lnaHRDb25uZWN0Cg==" } }'
   disable_agent:
     title: Disable Agent
     description: Disable agents that match a filter
@@ -2383,6 +2396,7 @@ actions:
         description: Number of entities affected by the requested operation
         type: integer
         required: true
+        example: 1
   enable_agent:
     title: Enable Agent
     description: Enable agents that match the filter
@@ -2411,6 +2425,7 @@ actions:
         description: Number of entities affected by the requested operation
         type: integer
         required: true
+        example: 1
   create_query:
     title: Create Query
     description: Start a Deep Visibility Query and get the queryId. You can use the queryId for other commands, such as Get Events and Get Query Status
@@ -2481,6 +2496,7 @@ actions:
         description: SentinelOne API call response data
         type: create_query_response
         required: false
+        example: '{ "response": { "data": { "affected": 0 } } }'
   get_query_status:
     title: Get Query Status
     description: Get that status of a Deep Visibility Query
@@ -2497,6 +2513,7 @@ actions:
         description: SentinelOne API call response data
         type: get_query_status_response
         required: false
+        example: '{ "response": { "data": { "progressStatus": 50, "responseState": "RUNNING" } } }'
   cancel_running_query:
     title: Cancel Running Query
     description: Stop a Deep Visibility Query by queryId
@@ -2513,6 +2530,7 @@ actions:
         description: SentinelOne API call response data
         type: cancel_query_response
         required: false
+        example: '{ "response": { "success": true } }'
   get_events:
     title: Get Events
     description: Get all Deep Visibility events from a queryId
@@ -2541,6 +2559,7 @@ actions:
         description: SentinelOne API call response data
         type: get_events_response
         required: false
+        example: '{ "response": { "data": [ { "agentDomain": "WORKGROUP", "agentGroupId": "123123456712356789", "agentId": "123123456712356789" } } }'
   get_events_by_type:
     title: Get Events by Type
     description: Get Deep Visibility results from the query that matches the given event type
@@ -2620,6 +2639,7 @@ actions:
         description: SentinelOne API call response data
         type: get_events_response
         required: false
+        example: '{ "response": { "data": [ { "agentDomain": "WORKGROUP", "agentGroupId": "123123456712356789", "agentId": "123123456712356789" }}}'
   update_analyst_verdict:
     title: Update Analyst Verdict
     description: Updates an analyst verdict for each incident ID provided
@@ -2656,6 +2676,7 @@ actions:
         description: Number of entities affected by the requested operation
         type: integer
         required: false
+        example: 1
   update_incident_status:
     title: Update Incident Status
     description: Updates an incident status for each incident ID provided
@@ -2691,6 +2712,7 @@ actions:
         description: Number of entities affected by the requested operation
         type: integer
         required: false
+        example: 1
 triggers:
   get_threats:
     title: Get Threats
@@ -2734,3 +2756,4 @@ triggers:
         description: Threat
         type: threat_data
         required: false
+        example: "{ 'threat': { 'agentComputerName':'vagrant-pc', 'agentDomain':'WORKGROUP', 'agentId':'560700200554747611' }}"
